# clipcode

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml  renovate.json  renovate.json5
.gitea/workflows/: build-and-deploy-nightly.yml  build-and-deploy-release.yml  ci.yml  release.yml
scripts/: sync_version_from_poetry.sh
src/clipcode/: __main__.py  cli.py  exporter.py  file_utils.py  gitignore_utils.py  syntax.py
tests/: __init__.py  test_cli.py  test_exporter_ignore.py  test_gitignore_regressions.py  test_gitignore_utils.py
