[tool.poetry]
name = "clipcode"
version = "0.7.0"
description = "Kompaktes CLI-Tool zur Extraktion von Quellcodedateien in Markdown-kompatibler Struktur für GPT-Prompts. Exportiert rekursiv Codeblöcke ins Clipboard – ideal für ChatGPT-Analysen."
authors = ["Max P. <Mail@0xMax42.io>"]
readme = "README.md"
packages = [{ include = "clipcode", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.scripts]
clipcode = "clipcode.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
